Add New vs Used chart and improve table theming
Introduced a doughnut chart for New vs Used item distribution on the dashboard, including dynamic color adaptation for dark mode. Adjusted point radius for chart data points, removed the Top Categories card, and refactored table and history item styles to use CSS variables for better dark mode support.

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -90,13 +90,7 @@
                     <div class="info-card">
                         <h3 class="info-card-title">New vs Used</h3>
                         <div class="info-card-content" id="cardNewVsUsed">
-                            <div class="placeholder-content">Placeholder</div>
-                        </div>
-                    </div>
-                    <div class="info-card">
-                        <h3 class="info-card-title">Top Categories</h3>
-                        <div class="info-card-content" id="cardTopCategories">
-                            <div class="placeholder-content">Placeholder</div>
+                            <canvas id="new-vs-used-chart"></canvas>
                         </div>
                     </div>
                 </div>
