--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                         autocomplete="off"
                     >
                 </div>
-                <button id="searchButton" type="button">Search</button>
+                <button id="searchButton" type="button" class="unselectable-text">Search</button>
             </div>
             <div class="header-actions">
                 <div class="history-button-container">
-                    <button id="historyButton" type="button" class="history-btn">Search History</button>
+                    <button id="historyButton" type="button" class="history-btn unselectable-text">Search History</button>
                 </div>
                 <button id="themeToggle" type="button" class="theme-toggle-btn" aria-label="Toggle dark mode">
-                    <span class="theme-icon">🌙</span>
+                    <span class="theme-icon unselectable-text"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/></svg></span>
                 </button>
             </div>
         </div>
@@ -39,11 +39,11 @@
     <div class="container">
         <!-- Home Page Title (shown when no search results) -->
         <div id="homePage" class="home-page">
-            <h1 class="home-title">ListingLab</h1>
+            <h1 class="home-title unselectable-text">ListingLab</h1>
         </div>
 
         <div id="loadingIndicator" class="loading" style="display: none;">
-            <div class="spinner"></div>
+            <div class="spinner unselectable-text"></div>
             <p>Searching...</p>
         </div>
 
@@ -51,7 +51,7 @@
 
         <!-- Dashboard Area (shown after successful search) -->
         <div id="dashboardSection" class="dashboard-section" style="display: none;">
-            <h2 class="dashboard-title" id="dashboardTitle"></h2>
+            <h2 class="dashboard-title unselectable-text" id="dashboardTitle"></h2>
             <div class="dashboard-layout">
                 <!-- Left Sidebar: Metric Cards -->
                 <div class="left-sidebar">
@@ -120,13 +120,13 @@
         <!-- Results Table (existing functionality) -->
         <div id="resultsSection" class="results-section" style="display: none;">
             <div class="results-header">
-                <h2 class="unselectable-text">Search Results </h2>
-                <button class="download-btn">Download All Data</button>
+                <h2 class="unselectable-text">Search Results</h2>
+                <button class="download-btn unselectable-text">Download All Data</button>
             </div>
             <div id="resultsTableContainer">
                 <table id="resultsTable">
                     <thead>
-                        <tr>
+                        <tr class="unselectable-text">
                             <th>#</th>
                             <th>Title</th>
                             <th>Price</th>
