update file structure and change font

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header class="main-header">
         <div class="header-content">
-            <h1 class="logo unselectable-text">ListingLab</h1>
+            <h1 class="logo">ListingLab</h1>
             <div class="search-box">
                 <div class="search-input-container">
                     <input 
@@ -40,11 +40,11 @@
     <div class="container">
         <!-- Home Page Title (shown when no search results) -->
         <div id="homePage" class="home-page">
-            <h1 class="home-title unselectable-text">ListingLab</h1>
+            <h1 class="home-title">ListingLab</h1>
         </div>
 
         <div id="loadingIndicator" class="loading" style="display: none;">
-            <div class="spinner unselectable-text"></div>
+            <div class="spinner"></div>
             <p>Searching...</p>
         </div>
 
@@ -52,28 +52,28 @@
 
         <!-- Dashboard Area (shown after successful search) -->
         <div id="dashboardSection" class="dashboard-section" style="display: none;">
-            <h2 class="dashboard-title unselectable-text" id="dashboardTitle"></h2>
+            <h2 class="dashboard-title" id="dashboardTitle"></h2>
             <div class="dashboard-layout">
                 <!-- Left Sidebar: Metric Cards -->
                 <div class="left-sidebar">
                     <div class="metric-card">
-                        <div class="metric-label unselectable-text">Total Listings</div>
+                        <div class="metric-label">Total Listings</div>
                         <div class="metric-value" id="metricTotalListings">-</div>
                     </div>
                     <div class="metric-card">
-                        <div class="metric-label unselectable-text">Average Price</div>
+                        <div class="metric-label">Average Price</div>
                         <div class="metric-value" id="metricAvgPrice">-</div>
                     </div>
                     <div class="metric-card">
-                        <div class="metric-label unselectable-text">Median Price</div>
+                        <div class="metric-label">Median Price</div>
                         <div class="metric-value" id="metricMedianPrice">-</div>
                     </div>
                     <div class="metric-card">
-                        <div class="metric-label unselectable-text">Min Price</div>
+                        <div class="metric-label">Min Price</div>
                         <div class="metric-value" id="metricMinPrice">-</div>
                     </div>
                     <div class="metric-card">
-                        <div class="metric-label unselectable-text">Max Price</div>
+                        <div class="metric-label">Max Price</div>
                         <div class="metric-value" id="metricMaxPrice">-</div>
                     </div>
                 </div>
@@ -81,14 +81,14 @@
                 <!-- Top Row: Listings by Price with Info Cards -->
                 <div class="top-row">
                     <div class="chart-panel dot-plot" id="chartListingsByPrice">
-                        <h3 class="chart-title unselectable-text"># Listings by Price</h3>
-                        <p class="chart-subtitle unselectable-text">Price distribution</p>
+                        <h3 class="chart-title"># Listings by Price</h3>
+                        <p class="chart-subtitle">Price distribution</p>
                         <div class="chart-placeholder">
                             <canvas id="listing-by-price"></canvas>
                         </div>
                     </div>
                     <div class="info-card">
-                        <h3 class="info-card-title unselectable-text">New vs Used</h3>
+                        <h3 class="info-card-title">New vs Used</h3>
                         <div class="info-card-content" id="cardNewVsUsed">
                             <canvas id="new-vs-used-chart"></canvas>
                         </div>
@@ -98,15 +98,15 @@
                 <!-- Main Content: Chart Panels (2x2 grid) -->
                 <div class="main-content">
                     <div class="chart-panel large" id="chartPriceVsSeller">
-                        <h3 class="chart-title unselectable-text">Price vs Seller Score</h3>
-                        <p class="chart-subtitle unselectable-text">Scatter plot</p>
+                        <h3 class="chart-title">Price vs Seller Score</h3>
+                        <p class="chart-subtitle">Scatter plot</p>
                         <div class="chart-placeholder">
                             <canvas id="price-vs-seller-score"></canvas>
                         </div>
                     </div>
                     <div class="chart-panel large" id="chartPriceByDate">
-                        <h3 class="chart-title unselectable-text">Price by Listing Date</h3>
-                        <p class="chart-subtitle unselectable-text">Time series</p>
+                        <h3 class="chart-title">Price by Listing Date</h3>
+                        <p class="chart-subtitle">Time series</p>
                         <div class="chart-placeholder">
                             <canvas id="price-vs-date"></canvas>
                         </div>
@@ -118,13 +118,13 @@
         <!-- Results Table (existing functionality) -->
         <div id="resultsSection" class="results-section" style="display: none;">
             <div class="results-header">
-                <h2 class="unselectable-text">Search Results</h2>
+                <h2>Search Results</h2>
                 <button id="downloadButton" class="download-btn unselectable-text">Download All Data</button>
             </div>
             <div id="resultsTableContainer">
                 <table id="resultsTable">
                     <thead>
-                        <tr class="unselectable-text">
+                        <tr>
                             <th>#</th>
                             <th>Title</th>
                             <th>Price</th>
