--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
                         autocomplete="off"
                     >
                 </div>
+                <div class="price-range-container">
+                    <input type="number" id="minPriceInput" placeholder="Min"min="0"step="0.01">
+                    <span class="price-range-separator">-</span>
+                    <input type="number" id="maxPriceInput" placeholder="Max"min="0"step="0.01"
+                    >
+                </div>
                 <button id="searchButton" type="button" class="unselectable-text">Search</button>
             </div>
             <div class="header-actions">
